# latch-curate

./: .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  pyproject.toml
latch_curate/: config.py  utils.py
sandbox/: scratch.py
workflows/transform-counts/: Dockerfile  pyproject.toml  utils.sh
workflows/transform-counts/.latch/: config  workflow_name
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-168c13/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-1a2db3/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-208486/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-2cfdf0/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-30cdcb/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-3f5c4e/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-4eea95/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-531334/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-5fe48e/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-678ea4/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-6907f6/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-699f1f/: docker-build-logs.txt
workflows/transform-counts/.latch/.logs/37545_wf_init_transform_counts_workflow:0.0.0-88eec9/: docker-build-logs.txt
workflows/transform-counts/latch_curate/: utils.py
workflows/transform-counts/latch_curate/qc/: __init__.py
workflows/transform-counts/latch_curate/transform/: __init__.py
workflows/transform-counts/wf/: __init__.py
(+48 files in other folders)
