[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/latch_curate"]
exclude = [
  "**/.venv",
  "**/__pycache__",
  "**/*.pyc",
  "**/*.pyo",
  "**/*.h5ad",
  "**/*.h5",
  "**/foobar",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv]
reinstall-package = ["latch_curate"]

[project]
name = "latch-curate"
version = "0.2.4"
description = "Tools for curating single cell data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Kenny Workman", email = "kenny@latch.bio" }
]
dependencies = [
  "scanpy==1.11.1",
  "scikit-image==0.25.2",
  "igraph==0.11.8",
  "harmonypy==0.0.10",
  "geoparse==2.0.4",
  "pysradb==2.2.2",
  "docker==7.1.0",
  "openai==1.81.0",
  "click==8.2.1",
  "latch>=2.63.1",
  "tiktoken>=0.9.0",
  "setuptools<81",
]

[project.scripts]
latch-curate = "latch_curate.main:main"
